[gd_scene load_steps=7 format=3 uid="uid://1yrh65yry7te"]

[ext_resource type="Texture2D" uid="uid://cfb6bi3iqn4y8" path="res://assets/bg_game.png" id="1_1rj2o"]
[ext_resource type="FontFile" uid="uid://bw3k4tce3p47u" path="res://assets/STHUPO.TTF" id="2_7rvx7"]
[ext_resource type="Script" path="res://scenes/online_screen.gd" id="2_xsdm0"]
[ext_resource type="Texture2D" uid="uid://ct2pwxjpmcjm" path="res://assets/button/empty.png" id="3_kx3oq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ek0tq"]
texture = ExtResource("3_kx3oq")
texture_margin_left = 15.2121
texture_margin_top = 14.0198
texture_margin_right = 15.0989
texture_margin_bottom = 14.0198

[sub_resource type="Theme" id="Theme_e6lho"]
Button/colors/font_color = Color(0.372549, 0.537255, 0.701961, 1)
Button/colors/font_focus_color = Color(0.372549, 0.537255, 0.701961, 1)
Button/font_sizes/font_size = 30
Button/fonts/font = ExtResource("2_7rvx7")
Button/styles/normal = SubResource("StyleBoxTexture_ek0tq")

[node name="OnlineScreen" type="TextureRect"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_1rj2o")
script = ExtResource("2_xsdm0")

[node name="NetworkInfo" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_constants/separation = 25

[node name="Network" type="Label" parent="NetworkInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Network"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PeerID" type="Label" parent="NetworkInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "PeerID"
horizontal_alignment = 1

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_e6lho")
theme_override_constants/separation = 50

[node name="Host" type="Button" parent="Menu"]
layout_mode = 2
text = "服务端"

[node name="Join" type="Button" parent="Menu"]
layout_mode = 2
text = "加入"

[connection signal="pressed" from="Menu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/Join" to="." method="_on_join_pressed"]
